force-app/main/default/objects/Opportunity/fields/School_Closure_Start__c.field-meta.xml
<CustomField>
    <fullName>School_Closure_Start__c</fullName>
    <description>Autofill school closure date from account</description>
    <formula>if(
MONTH(Month_to_Ship_Date__c)= MONTH(Account.Fall_Break_Start__c) 
, Account.Fall_Break_Start__c,
if(
MONTH(Month_to_Ship_Date__c)= MONTH(Account.Thanksgiving_Break_Start__c)
, Account.Thanksgiving_Break_Start__c, 
if(
MONTH(Month_to_Ship_Date__c)= MONTH(Account.Winter_Holiday_Start__c)
, Account.Winter_Holiday_Start__c, 
if(
MONTH(Month_to_Ship_Date__c)= MONTH(Account.Mid_Winter_Feb_Break_Start__c)
, Account.Mid_Winter_Feb_Break_Start__c, 
if(
MONTH(Month_to_Ship_Date__c)= MONTH(Account.Mardi_Gras_Start__c)
, Account.Mardi_Gras_Start__c, 
if(
MONTH(Month_to_Ship_Date__c)= MONTH(Account.Mid_Winter_Mar_Break_Start__c)
, Account.Mid_Winter_Mar_Break_Start__c, 
if(
MONTH(Month_to_Ship_Date__c)= MONTH(Account.Spring_April_Break_Start__c)
, Account.Spring_April_Break_Start__c, 
if(
MONTH(Month_to_Ship_Date__c)= MONTH(Account.Spring_May_Break_Start__c)
, Account.Spring_May_Break_Start__c, NULL)
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Closure Start</label>
    <type>Date</type>
</CustomField>