force-app/main/default/objects/Opportunity/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the account object for purpose of picking a ship to address</description>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Ship To)</relationshipLabel>
    <relationshipName>Opportunities_ship_to</relationshipName>
    <type>Lookup</type>
</CustomField>