force-app/main/default/objects/Opportunity/fields/Ship_to_Bill_to_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Bill_to_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ship to/Bill to Confirmed</label>
    <type>Checkbox</type>
</CustomField>