force-app/main/default/objects/Opportunity/fields/Software_Setup_Done__c.field-meta.xml
<CustomField>
    <fullName>Software_Setup_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>softwaresetupdone</description>
    <label>Software Setup Done</label>
    <type>Checkbox</type>
</CustomField>