force-app/main/default/objects/Opportunity/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <label>Solution Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100 BC Eng</fullName>
            </value>
            <value>
                <fullName>100 BC Eng &amp; Span</fullName>
            </value>
            <value>
                <fullName>100 BC Span</fullName>
            </value>
            <value>
                <fullName>ARC Core Eng</fullName>
            </value>
            <value>
                <fullName>ARC Core Eng &amp; Span</fullName>
            </value>
            <value>
                <fullName>ARC Core Span</fullName>
            </value>
            <value>
                <fullName>Classroom Lib/Text</fullName>
            </value>
            <value>
                <fullName>ENIL Starter</fullName>
            </value>
            <value>
                <fullName>IRLA Starter</fullName>
            </value>
            <value>
                <fullName>IRLA/ENIL Starter</fullName>
            </value>
            <value>
                <fullName>Leadership Learning Series</fullName>
            </value>
            <value>
                <fullName>Lit Labs Eng</fullName>
            </value>
            <value>
                <fullName>Lit Labs Eng &amp; Span</fullName>
            </value>
            <value>
                <fullName>Lit Labs Span</fullName>
            </value>
            <value>
                <fullName>Professional Development</fullName>
            </value>
            <value>
                <fullName>Research Labs Eng</fullName>
            </value>
            <value>
                <fullName>Research Lab Eng &amp; Span</fullName>
            </value>
            <value>
                <fullName>Research Span</fullName>
            </value>
            <value>
                <fullName>Summer Semester</fullName>
            </value>
            <value>
                <fullName>Take Home Kits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>