force-app/main/default/objects/Opportunity/fields/Split_From__c.field-meta.xml
<CustomField>
    <fullName>Split_From__c</fullName>
    <inlineHelpText>What opportunity was this order split from?</inlineHelpText>
    <label>Split From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>