force-app/main/default/objects/Opportunity/fields/Split_Reason__c.field-meta.xml
<CustomField>
    <fullName>Split_Reason__c</fullName>
    <label>Split Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Split_Reason</valueSetName>
    </valueSet>
</CustomField>