force-app/main/default/objects/Opportunity/fields/Splits_Required_By__c.field-meta.xml
<CustomField>
    <fullName>Splits_Required_By__c</fullName>
    <label>Splits Required By</label>
    <type>Date</type>
</CustomField>