force-app/main/default/objects/Opportunity/fields/SplitsRequired__c.field-meta.xml
<CustomField>
    <fullName>SplitsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Splits Required</label>
    <type>Checkbox</type>
</CustomField>