force-app/main/default/objects/Opportunity/fields/Stage_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Stage_Last_Updated__c</fullName>
    <label>Stage Last Updated</label>
    <type>DateTime</type>
</CustomField>