force-app/main/default/objects/Opportunity/fields/Submit_To__c.field-meta.xml
<CustomField>
    <fullName>Submit_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submit To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Submit To)</relationshipLabel>
    <relationshipName>Submit_To_Account</relationshipName>
    <type>Lookup</type>
</CustomField>