force-app/main/default/objects/Opportunity/fields/Synced_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Synced_Quote_ID__c</fullName>
    <formula>CASESAFEID(SyncedQuote.QuoteNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Synced Quote ID</label>
    <type>Text</type>
</CustomField>