force-app/main/default/objects/Opportunity/fields/Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID__c</fullName>
    <formula>Account.Territory_ID__c</formula>
    <label>Territory ID</label>
    <type>Text</type>
</CustomField>