force-app/main/default/objects/Opportunity/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Tracking number for shipping</description>
    <label>Tracking_Number</label>
    <type>TextArea</type>
</CustomField>