force-app/main/default/objects/Opportunity/fields/WA_LOS_Pretty_Invoice__c.field-meta.xml
<CustomField>
    <fullName>WA_LOS_Pretty_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WA LOS Pretty Invoice</label>
    <type>Checkbox</type>
</CustomField>