force-app/main/default/objects/Opportunity/fields/Waiting_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to be the DOCKYN field in ICRM</description>
    <label>Waiting Confirmation</label>
    <type>Checkbox</type>
</CustomField>