force-app/main/default/objects/Opportunity/fields/Warehouse_Notes__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Notes__c</fullName>
    <label>Warehouse Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>