force-app/main/default/objects/Opportunity/recordTypes/EL_Products.recordType-meta.xml
<RecordType>
    <fullName>EL_Products</fullName>
    <active>true</active>
    <businessProcess>EL Products</businessProcess>
    <description>Opportunity Type for EL Products</description>
    <label>EL Products</label>
</RecordType>