force-app/main/default/objects/Opportunity/recordTypes/LADOE_Products.recordType-meta.xml
<RecordType>
    <fullName>LADOE_Products</fullName>
    <active>true</active>
    <businessProcess>LADOE Products</businessProcess>
    <description>Opportunity Type for LADOE Products</description>
    <label>LADOE Products</label>
</RecordType>