force-app/main/default/objects/Opportunity/recordTypes/RFP_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>RFP_Opportunity</fullName>
    <active>true</active>
    <businessProcess>RFP_Process</businessProcess>
    <description>RFP and other non standard opportunity record type</description>
    <label>RFP Opportunity</label>
</RecordType>