force-app/main/default/objects/Opportunity/validationRules/Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>If(  RecordTypeId = &apos;01211000002K3Lt&apos;,
OR(  ISBLANK(Amount),  Amount = 0 ),
false)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>This field must be greater than zero.</errorMessage>
</ValidationRule>