force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Competitor.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Competitor</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( StageName ) &amp;&amp;
ISPICKVAL(StageName , &apos;Closed Lost&apos;) &amp;&amp; (
 Text(Closed_Lost_Competitor__c)  =  &apos;&apos;  ||
 Text(Closed_Lost_Competitor__c)= null )&amp;&amp;
 Record_Type__c = &apos;Sales Opportunity&apos;</errorConditionFormula>
    <errorDisplayField>Closed_Lost_Competitor__c</errorDisplayField>
    <errorMessage>For ARC Core opportunities, please enter the competitor this opportunity was lost to. 

For non-ARC Core opportunities, please enter &apos;Not ARC Core&apos;.</errorMessage>
</ValidationRule>