force-app/main/default/objects/Opportunity/validationRules/Closed_lost_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_lost_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(  StageName  ) &amp;&amp;
ISPICKVAL(StageName   , &apos;Closed Lost&apos;) &amp;&amp;
ISBLANK( Closed_Lost_Reason__c )&amp;&amp;
 Record_Type__c = &apos;Sales Opportunity&apos;</errorConditionFormula>
    <errorDisplayField>Closed_Lost_Reason__c</errorDisplayField>
    <errorMessage>Please enter the reason this opportunity was lost.</errorMessage>
</ValidationRule>