force-app/main/default/objects/Opportunity/validationRules/Closed_Opportunity_should_have_PO_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Opportunity_should_have_PO_Number</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  IsWon =true , IF(  ISBLANK(   PO_Number__c ),true,false ), false)</errorConditionFormula>
    <errorDisplayField>PO_Number__c</errorDisplayField>
    <errorMessage>You should have a PO Number to close the deal. This is usually entered and moved by a PC.</errorMessage>
</ValidationRule>