force-app/main/default/objects/Opportunity/validationRules/Grant_Funded_Needs_NBD.validationRule-meta.xml
<ValidationRule>
    <fullName>Grant_Funded_Needs_NBD</fullName>
    <active>true</active>
    <description>If the grant funded box is checked, the Must Be Received date should be required</description>
    <errorConditionFormula>AND(
ISBLANK(Must_Be_Received__c),
Grant_Funded__c = True
)</errorConditionFormula>
    <errorDisplayField>Must_Be_Received__c</errorDisplayField>
    <errorMessage>Grant Funded checked and no Must Be Received date.</errorMessage>
</ValidationRule>