force-app/main/default/objects/Opportunity/validationRules/Implementing_School_Year_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Implementing_School_Year_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>If( RecordTypeId =&apos;01211000002K3LtAAK&apos;  ,If(   
 INCLUDES(Solution_Type__c, &apos;100 BC Eng&apos;)  ||  INCLUDES(Solution_Type__c, &apos;ARC Core Eng&apos;)  
,
 ISPICKVAL(   Implementing_School_Year__c   , &apos;&apos;) 
,false ),false)</errorConditionFormula>
    <errorMessage>Please fill out the &apos;Implementing School Year&apos; field for this opportunity.</errorMessage>
</ValidationRule>