force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>Arc_Proposal_ID__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Opportunity_Parent_Acccount__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Confidence_Level__c</columns>
    <columns>Month_to_Ship__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Proposal_Status__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Split_From__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.RFP_Opportunity</value>
    </filters>
    <label>All Opportunities</label>
</ListView>