force-app/main/default/objects/Opportunity/listViews/AM_Alfred_Juarez_Open.listView-meta.xml
<ListView>
    <fullName>AM_Alfred_Juarez_Open</fullName>
    <columns>Arc_Proposal_ID__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Opportunity_Parent_Acccount__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Confidence_Level__c</columns>
    <columns>Month_to_Ship__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Approval_Status__c</columns>
    <columns>Split_From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proposal_Status__c</field>
        <operation>contains</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Sales_Opportunity</value>
    </filters>
    <filters>
        <field>AM__c</field>
        <operation>equals</operation>
        <value>Alfred Juarez</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Target,Prospect,Qualify,1-Discover,2-Design,3-Prove,4-Close</value>
    </filters>
    <label>AM - Alfred Juarez - Open</label>
</ListView>